version 2015-04-04
      Refactoring to improve memory usage

version 2015-03-23
      Change to autoload approach
      Create dao after plugin activation

version 2015-03-04
      Simplify code by moving html into a separate file
      Add subscriber id and uniqid as subscriber data fields

version 2015-02-16
      Refactoring
      Change licence year

version 2015-02-13
      Add "is between" operator for date fields

version 2015-01-06
      Remove limit of 15 attributes

version 2014-11-21
      Use s() function to allow text to be translated

version 2014-10-20
      Show only campaigns sent to the selected lists

version 2014-10-18
      Fix bug in date sql

version 2014-10-15
      Correct subquery for clicked to include only those who were sent the campaign
      Added excluded lists
      Reorganise query structure to avoid querying all subscribers

version 2014-10-04
      Add was sent/not sent a campaign
      Add clicked any link/did not click any link in a campaign

version 2014-10-03
      Use multi-select for select list and radio buttons
      Select subscribers who meet any or all conditions
      Use enum for operators

version 2014-09-27
      Correct error reporting

version 2014-09-26
      Pull Request #1, strict warnings

version 2014-09-25
      Add regexp matching for email address and text attributes

version 2014-09-24
      Initial release to GitHub