@@ -147,6 +147,18 @@ class SegmentPlugin extends phplistPlugin
         parent::__construct();
     }
 
+    public function dependencyCheck()
+    {
+        global $plugins;
+
+        return array(
+            'Common plugin installed' =>
+                phpListPlugin::isEnabled('CommonPlugin') && 
+                (strpos($plugins['CommonPlugin']->version, 'Git') === 0 || $plugins['CommonPlugin']->version >= '2015-03-23'),
+            'PHP version 5.3.0 or greater' => version_compare(PHP_VERSION, '5.3') > 0,
+        );
+    }
+
 /*
  *  Use this method as a hook to create the dao
  *  Need to create autoloader because of the unpredictable order in which plugins are called
